err/ncs-tools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/NCs_tools'...
Compiling './lib/python3.5/site-packages/NCs_tools/iPlot.py'...
***   File "./lib/python3.5/site-packages/NCs_tools/iPlot.py", line 782
    PropCombobox(self.root, self._obj, prop, row, [f'{cls.__module__}.{cls.__name__}({get_all_args(cls.__init__)})' for cls in get_subclasses(matplotlib.ticker.Formatter)])
                                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/NCs_tools/iPlotOrg.py'...
***   File "./lib/python3.5/site-packages/NCs_tools/iPlotOrg.py", line 703
    PropCombobox(self.root, self._obj, prop, row, [f'{cls.__module__}.{cls.__name__}({get_all_args(cls.__init__)})' for cls in get_subclasses(matplotlib.ticker.Formatter)])
                                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/NCs_tools/misc.py'...
***   File "./lib/python3.5/site-packages/NCs_tools/misc.py", line 20
    raise ValueError(f'File: {template} doesnt exist!')
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/NCs_tools/tktools.py'...
***   File "./lib/python3.5/site-packages/NCs_tools/tktools.py", line 455
    self.geometry(f'+{dock_widget.winfo_rootx()}+{dock_widget.winfo_rooty() + dock_widget.winfo_height()}')
                                                                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NCs_tools-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
